--- a/html/test/test.html
+++ b/html/test/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
     
+    <script src="../data/countries.js"></script>
+    <script src="../data/class_country.js"></script>
 </body>
-<script src="../data/countries.js"></script>
-<script src="../data/class_country.js"></script>
 </html>
