refacto currency, ajout de commentaire dans la classe coutry et currency

--- a/html/test/test.html
+++ b/html/test/test.html
@@ -9,5 +9,7 @@
     
     <script src="../data/countries.js"></script>
     <script src="../data/class_country.js"></script>
+    <script src="../data/class_currency.js"></script>
+    <script>console.log(Country.all_countries["FRA"].toString())</script>
 </body>
 </html>
