some refacto ==> ajout de noms en francais dans Country

--- a/html/test/test.html
+++ b/html/test/test.html
@@ -9,7 +9,6 @@
     
     <script src="../data/countries.js"></script>
     <script src="../data/class_country.js"></script>
-    <script src="../data/class_currency.js"></script>
-    <script>console.log(Country.all_countries["FRA"].toString())</script>
+    <script src="../data/class_currency.js"></script>s
 </body>
 </html>
