--- a/html/test/test.html
+++ b/html/test/test.html
@@ -9,6 +9,7 @@
     
     <script src="../data/countries.js"></script>
     <script src="../data/class_country.js"></script>
-    <script src="../data/class_currency.js"></script>s
+    <script src="../data/class_currency.js"></script>
+    <script>console.log(Country.all_countries["CUB"].toString())</script>
 </body>
 </html>
