--- a/html/test/test.html
+++ b/html/test/test.html
@@ -9,5 +9,6 @@
     
     <script src="../data/countries.js"></script>
     <script src="../data/class_country.js"></script>
+    <script src="../data/class_currency.js"></script>
 </body>
 </html>
