--- a/html/test/test.html
+++ b/html/test/test.html
@@ -10,5 +10,6 @@
     <script src="../data/countries.js"></script>
     <script src="../data/class_country.js"></script>
     <script src="../data/class_currency.js"></script>
+    <script src="../data/class_language.js"></script>
 </body>
 </html>
