--- a/html/test/test.html
+++ b/html/test/test.html
@@ -11,5 +11,6 @@
     <script src="../data/class_country.js"></script>
     <script src="../data/class_currency.js"></script>
     <script src="../data/class_language.js"></script>
+    <script src="../test/test.js"></script>
 </body>
 </html>
